--- a/html/index.html
+++ b/html/index.html
@@ -121,18 +121,40 @@
 -->
 
   <form action="">
-    <label for="nombre">Inserta tu nombre aqui.</label>
+    <!-- <label for="nombre">Inserta tu nombre aqui.</label>
+
     <input type="text" id="nombre" placeholder="Nombre">
     <input type="password">
     <input type="number">
     <input type="tel">
     <input type="date">
     <input type="email">
-    <input type="file" >
+    <input type="file">
     <input type="button" value="hola">
+
     <button>Hola</button>
     <input type="submit" value="hola">
 
+    <label for="m">masculino</label>
+    <input type="checkbox" id="">
+    <label for="">femenino</label>
+    <input type="checkbox" id="m">
+
+    <label for="diez">10</label>
+    <input type="radio" name="edad" value="diez" id="diez">
+    <label for="">20</label>
+    <input type="radio" name="edad" value="veinte" id="">
+    <label for="">30</label>
+    <input type="radio" name="edad" value="treinta">
+    <label for="">40</label>
+    <input type="radio" name="edad" value="cuarenta"> -->
+    <select name="" id="">
+      <option value="" disabled selected>Selecciona un opción</option>
+      <option value="mexico">México</option>
+      <option value="espania">España</option>
+      <option value="usa">USA</option>
+    </select>
+    
   </form>
 
   </body>
